@@ -689,6 +689,7 @@ class TestInvoker extends BaseInvoker implements ITestInvoker {
       if (exceptionsHolder != null) {
         if (exceptionsHolder.isExpectedException(ite)) {
           testresult.setStatus(ITestResult.SUCCESS);
+          testresult.setThrowable(null);
           holder.status = ITestResult.SUCCESS;
         } else {
           if (isSkipExceptionAndSkip(ite)) {
